# mllibs

./: README.md  dict_helper.py  mllibs_run.ipynb  module.py  ner_corpus.csv  ner_parser.py  nlpi.py  nlpm.py  notebook.css  pyproject.toml  setup.cfg  setup.py  user_request.py
.ipynb_checkpoints/: mllibs_run-checkpoint.ipynb
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
.virtual_documents/: mllibs_run.ipynb
.virtual_documents/run/: mllibs_run.ipynb
custom_models/: bl_regressor.py  gmm.py  gp_bclassifier.py  gpr_bclassifier.py  kriging_regressor.py
data/: conversation.csv
docs/markdown/: mlproject.md
docs/markdown/group/: meetups.md
docs/markdown/modules/: adding.md
examples/: mllibs-encode-text.ipynb  mllibs-text-normalisation.ipynb  mllibs_NER_tagger.ipynb
modules/: mpd_dfop.py  mstats_plot.py  mstats_tests.py
reference/: 404.html  README.md  home.en.html  home.html  home.ru.html  install.html  meetups.html  member.html  members.html  mlproject.html  modules.html  sitemap.xml  status.html
reference/Documentation/: nlpi.html  nlpm.html
reference/Group/: meetups.html  members.html  status.html
reference/Modules/: adding.html  grouping.html  list.html
reference/Modules/en/: adding.html  grouping.html  list.html
reference/Modules/ja/: adding.html  grouping.html  list.html
reference/Tutorials/: overview.html
reference/docs/: mkdocs.yml
reference/docs/markdown/: home.md  mlproject.md
reference/documentation/: nlpi.html  nlpm.html
reference/en/: home.html  install.html
reference/group/: meetups.html  members.html  status.html
reference/ja/: home.html  install.html
reference/modules/: adding.html  grouping.html  list.html
reference/ru/: home.en.html  home.html  home.ru.html  install.html
reference/search/: search_index.js  search_index.json
reference/tutorials/: overview.html
run/: mllibs_run.ipynb
run/.ipynb_checkpoints/: mllibs_run-checkpoint.ipynb
run/.virtual_documents/: mllibs_run.ipynb
src/: data_storage.py  module.py  nlpi.py  nlpm.py  tokenisers.py  user_request.py
src/mllibs/: data_conversion.py  df_helper.py  dict_helper.py  interface.py  loader.json  mdsplit.py  meda_scplot.py  meda_splot.py  membedding.py  mencoder.py  module.py  module_helper.py  moutliers.py  mpd_df.py  mseda.py  mtextnorm.py  musldimred.py  ner_activecolumn.py  nerparser.py  nlpi.py  nlpm.py  str_helper.py  user_request.py
src/mllibs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
utils/: Untitled.ipynb  Untitled1.ipynb  bf4.ipynb  gt_corpus.csv  manual_calls.py  massive_annotator.ipynb  mllibs_setup.ipynb  ner_corpus.csv  ner_modelparams_annot.csv  ner_parser.py  simple_NER.ipynb  temp.csv  train_classifier_transformers.ipynb
utils/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  mllibs_setup-checkpoint.ipynb  simple_NER-checkpoint.ipynb
utils/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
utils/local_classifier/: config.json
versions/: mllibs-0.0.2-py3-none-any.whl  mllibs-0.0.3-py3-none-any.whl  mllibs-0.0.6-py3-none-any.whl  mllibs-0.0.7-py3-none-any.whl  mllibs-0.0.9-py3-none-any.whl  mllibs-0.1.0-py3-none-any.whl  mllibs-0.1.2-py3-none-any.whl
(+94 files in other folders)
