[build-system]
requires = [
    "plotly>=4.12.0",
    "setuptools>=42",
    "wheel",
    "numpy>=1.19.5",
    "pandas>=1.3.3",
    "scipy>=1.7.3",
    "nltk>=3.8.1",
    "seaborn>=0.11.2",
    "matplotlib>=3.4.3",
    "panel>=0.14.4",
    "sklearn>=0.23.2",
    "keras>=2.11.0",
    "tensorflow>=2.11.0",
    "torch>=2.0.0+cpu",
    "gensim>=4.3.1"    
]
build-backend = "setuptools.build_meta"