[metadata]
name = mllibs
version = 0.1.7
author = Andrey Shtrauss
author_email = shtraussart@gmail.com
description = Simplifying Machine Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shtrausslearning/mllibs
project_urls =
    Bug Tracker = https://github.com/shtrausslearning/mllibs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata
    setuptools
    wheel
    numpy
    pandas
    scipy
    nltk
    seaborn
    matplotlib
    scikit-learn
    gensim
    spacy
    torch

